tests/negative/Internal/FunctionApplied.juvix
module FunctionApplied;
  inductive T (A : Type) {
    c : A → T A;
  };

  f : {A : Type} → A → T A;
  f {A} a := c {(A → A) A} a;
end;
